After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749426 - privacy policy window can't be resized
privacy policy window can't be resized
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-05-15 12:42 UTC by Kamil Páral
Modified: 2015-05-16 19:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
resized privacy policy window (76.83 KB, image/png)
2015-05-15 12:42 UTC, Kamil Páral
Details

Description Kamil Páral 2015-05-15 12:42:04 UTC
Created attachment 303421 [details]
resized privacy policy window

Please see the attached screenshot to see what happens if I try to resize the privacy policy window. The bottom part is not resized correctly and is grayed out.

gnome-initial-setup-3.16.2-1.fc22.x86_64