privacy: Make policy dialog resize properly

For some reason, the webview is not expanding when the window
is resized, unless we explicitly set the expand flags.

https://bugzilla.gnome.org/show_bug.cgi?id=749426